--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,9 @@
 spring.application.name=products
 spring.datasource.url = jdbc:mysql://127.0.0.1:3306/productservice
 spring.datasource.username = root
-spring.datasource.password =
+spring.datasource.password = namannaman
 spring.jpa.show-sql = true
 spring.jpa.hibernate.ddl-auto = create
 server.port=8080
+spring.data.redis.host=localhost
+spring.data.redis.port=6379
